# AI4SE

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: selftest.yml
aise/: agent_compaction.py  agent_runner.py  agent_runtime.py  agent_state.py  agent_upgrade.py  approvals.py  audit.py  cli.py  codewiki_ops.py  codewiki_templates.py  config.py  credentials.py  git_tools.py  git_utils.py  llm_openai.py  memory.py  path_match.py  schema_loader.py  selftest.py  wiki_complete.py
aise/extractors/: base.py  cmake.py  cpp_headers.py  java_rest.py  maven.py  spring.py  symbol_index.py  util.py
aise/resources/schemas/: api.schema.json  common.schema.json  flow.schema.json  index.schema.json  module.schema.json  playbook.schema.json  relations.schema.json  views-entry-graph.schema.json  views-entrypoints.schema.json  views-filetree.schema.json  views-java-http-routes.schema.json  views-module-files.schema.json  views-module-symbols.schema.json  (+1 more)
aise/templates/: github-actions-codewiki.yml
tests/: test_best_match_filetree.py  test_cmake_parser.py  test_compaction.py  test_config.py  test_cpp_headers_extractor.py  test_diff_gate.py  test_git_apply_patch.py  test_java_http_routes_view.py  test_java_rest_extractor.py  test_load_openai_config_from_file.py  test_memory.py  test_module_files_view.py  test_patch_touched_files.py  test_plan_contract.py  test_spring_extractor.py  test_symbol_index_extractor.py  test_upgrade_request.py  test_verify_allowlist.py  test_wiki_complete.py
tests/fixtures/: agent_integration_scenario.json
(+2 files in other folders)
